--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     </string>
     <string name="title_activity_rest_ful">RestFul</string>
     <string name="title_activity_rest_post">Sign in</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
